# ndeAero

./: CMakeLists.txt  README.md  main.cpp  test_results.txt
Glade/ndeAirfoil/: ndeairfoil.glade  ndeairfoil.glade.bak  ndeairfoil.gladep
cpp_library/: AerodynamicBody2D.cpp  Airfoil.cpp  AirfoilBoundaryLayer.cpp  BoundaryLayer.cpp  CMakeLists.txt  EpplerBLFunctions.cpp  EquationSolver.cpp  Interpolator.cpp  MathUtils.cpp  NacaAirfoil.cpp  ODESolver.cpp  Panel.cpp  ThinAirfoil.cpp  Wing.cpp
cpp_library/include/: AerodynamicBody2D.hpp  Airfoil.hpp  AirfoilBoundaryLayer.hpp  BoundaryLayer.hpp  Constants.hpp  EpplerBLFunctions.hpp  EquationSolver.hpp  Interpolator.hpp  MathUtils.hpp  NacaAirfoil.hpp  NacaAirfoilHelper.hpp  ODESolver.hpp  Panel.hpp  SmartPtr.hpp  ThinAirfoil.hpp  Vector.hpp  Wing.hpp
cpp_tests/: CMakeLists.txt  Test.hpp  TestNACA4Digits.cpp  TestODESolver.cpp  TestODESolver.hpp  TestThinAirfoil.cpp  TestThinAirfoil.hpp  TestThinAirfoilTheory.cpp  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: AerodynamicBody2D.cpp  AerodynamicBody2D.hpp  Airfoil.cpp  CMakeLists.txt  Interpolator.cpp  Interpolator.hpp  Matrix.hpp  Panel.cpp  Panel.hpp  PotentialFlowElements.cpp  PotentialFlowElements.hpp  Vector.hpp  combinatorial.cpp  combinatorial.hpp  curveinterpolation.cpp  testVector.cpp
